<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/solid_round_rectangle_white"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/dialog_mission_hint_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="@color/gray_33"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/arrival" />

        <TextView
            android:id="@+id/dialog_mission_hint_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:textColor="@color/gray_33"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/congratulation" />

        <LinearLayout
            android:id="@+id/dialog_mission_hint_btn_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/solid_round_bottom_green"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_mission_hint_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>