<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <FrameLayout
                android:id="@+id/back_fl"
                android:layout_width="@dimen/action_bar_btn_width"
                android:layout_height="match_parent"
                android:layout_gravity="start">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:gravity="center"
                    android:src="@mipmap/button_back" />

            </FrameLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/filter"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_action_bar" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/theme_filter_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            tools:itemCount="3"
            tools:listitem="@layout/theme_category_item" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="@drawable/solid_rectangle_gradient_gray" />

        <TextView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/solid_round_rectangle_green"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/search"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="30dp"
            android:text="@string/clear_filter"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
    </LinearLayout>
</FrameLayout>