<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:background="@drawable/solid_round_rectangle_gray"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="0.9"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:src="@mipmap/ic_calendar" />

                <TextView
                    android:id="@+id/startDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:text="@string/start_date"
                    android:textColor="@color/gray_33"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.12"
                    android:gravity="center"
                    android:text="～"
                    android:textColor="@color/gray_33"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:src="@mipmap/ic_calendar" />

                <TextView
                    android:id="@+id/endDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:text="@string/end_date"
                    android:textColor="@color/gray_33"
                    android:textSize="14sp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/date_search_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@drawable/solid_round_right_green">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_search" />
            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/clear"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

        </FrameLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mission_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp" />
</LinearLayout>