<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_nine_fragment_reward_navi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@color/gray_f5"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_nine_grid"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <FrameLayout
                android:id="@+id/back_fl"
                android:layout_width="@dimen/action_bar_btn_width"
                android:layout_height="match_parent"
                android:layout_gravity="start">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:gravity="center"
                    android:src="@mipmap/button_back" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mission"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_action_bar"
                android:visibility="gone" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/fragment_reward_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/gray_33"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_reward_date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/gray_33"
            android:textSize="16sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray_cc"
            android:visibility="gone" />

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/fragment_reward_pic"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/fragment_reward_desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/gray_33"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/already_collect_rewards_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/solid_round_rectangle_gray_cc"
            android:gravity="center"
            android:scaleType="fitXY"
            android:text="@string/received"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_action_bar"
            android:visibility="gone" />

        <TextView
            android:id="@+id/collect_rewards_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/solid_round_rectangle_green_green_stroke"
            android:gravity="center"
            android:scaleType="fitXY"
            android:text="@string/receive_reward"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_action_bar"
            android:visibility="gone" />
    </LinearLayout>
</FrameLayout>